fixed button on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -233,7 +233,7 @@ button:focus {
   }
   
   #another, #back {
-    width: 400px;
+    width: 80%;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
